--- a/uknown_4yl1qa.bot_scam_do_not_run.json
+++ b/uknown_4yl1qa.bot_scam_do_not_run.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_4yl1qa.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_4yl1qa.bot_scam_do_not_run",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571045535870,
+	"last_scraped": 1571045547230,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571039675621,
-	"edit": 99,
-	"next_scrape": 1571087073260,
+	"updt": 1571045542121,
+	"edit": 100,
+	"next_scrape": 1571087623718,
 	"category": "dice_roller",
-	"last_update": 1571045535870,
+	"last_update": 1571045547230,
 	"output": [
 		{
 			"args": {},
-			"calls": 918968,
+			"calls": 923247,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"igned",
