--- a/unknown_tg52f6.and_down_smash.json
+++ b/unknown_tg52f6.and_down_smash.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_tg52f6.and_down_smash",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_tg52f6.and_down_smash",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571039552902,
+	"last_scraped": 1571045735562,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571033952270,
-	"edit": 105,
-	"next_scrape": 1571084341501,
+	"updt": 1571039675621,
+	"edit": 106,
+	"next_scrape": 1571087824966,
 	"category": "coin_flipper",
-	"last_update": 1571039552902,
+	"last_update": 1571045735562,
 	"output": [
 		{
 			"args": {},
-			"calls": 923507,
+			"calls": 950664,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e tim",
