--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_puquph.weather",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_puquph.weather",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571044750892,
+	"last_scraped": 1571051072241,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571039222982,
-	"edit": 62,
-	"next_scrape": 1571091273931,
+	"updt": 1571044864628,
+	"edit": 63,
+	"next_scrape": 1571092819565,
 	"category": "coin_flipper",
-	"last_update": 1571044750892,
+	"last_update": 1571051072241,
 	"output": [
 		{
 			"args": {},
-			"calls": 534791,
+			"calls": 555038,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ses. T",
