--- a/uknown_dobbrb.viewk3ys.json
+++ b/uknown_dobbrb.viewk3ys.json
@@ -1,24 +1,24 @@
 {
 	"_id": "uknown_dobbrb.viewk3ys",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_dobbrb.viewk3ys",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571050650434,
+	"last_scraped": 1571056156148,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571044414651,
-	"edit": 64,
+	"updt": 1571050726383,
+	"edit": 65,
 	"scrape_ct": 1,
-	"next_scrape": 1571090865541,
+	"next_scrape": 1571099973851,
 	"category": "plant_sim",
-	"last_update": 1571050650434,
+	"last_update": 1571056156148,
 	"output": [
 		{
 			"args": {},
@@ -61,7 +61,7 @@
 		},
 		{
 			"args": {},
-			"calls": 16030,
+			"calls": 17782,
 			"base": "c:\"jccvvi\" d:\"<f l n s w>\"\n\n\n\n\n\n                \n                ÃÃ\n                ",
 			"fragments": [
 				"deal d",
