--- a/unknown_0axb7v.npc.json
+++ b/unknown_0axb7v.npc.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_0axb7v.npc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0axb7v.npc",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571051021473,
+	"last_scraped": 1571056579432,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571044864628,
-	"edit": 63,
+	"updt": 1571051177192,
+	"edit": 64,
 	"scrape_ct": 5,
-	"next_scrape": 1571094254824,
+	"next_scrape": 1571102646848,
 	"category": "plant_sim",
-	"last_update": 1571051021473,
+	"last_update": 1571056579432,
 	"output": [
 		{
 			"args": {},
@@ -54,7 +54,7 @@
 		},
 		{
 			"args": {},
-			"calls": 50974,
+			"calls": 51903,
 			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"SUBJ ",
