--- a/unknown_8qfkzs.t3scrape.json
+++ b/unknown_8qfkzs.t3scrape.json
@@ -6,22 +6,22 @@
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571056828340,
+	"last_scraped": 1571062281195,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571051628049,
-	"edit": 118,
-	"next_scrape": 1571101316412,
+	"updt": 1571057041448,
+	"edit": 119,
+	"next_scrape": 1571102331113,
 	"category": "dice_roller",
-	"last_update": 1571056828340,
+	"last_update": 1571062281195,
 	"output": [
 		{
 			"args": {},
-			"calls": 991601,
+			"calls": 1002287,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ns ind",
