--- a/uknown_92vtu0.mktable.json
+++ b/uknown_92vtu0.mktable.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_92vtu0.mktable",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_92vtu0.mktable",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571062008772,
+	"last_scraped": 1571067565053,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571056816400,
-	"edit": 65,
-	"next_scrape": 1571106795424,
+	"updt": 1571062225006,
+	"edit": 66,
+	"next_scrape": 1571108837059,
 	"category": "plant_sim",
-	"last_update": 1571062008772,
+	"last_update": 1571067565053,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 45873,
+			"calls": 47949,
 			"base": "c:\"c6k61e\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"irst.",
