--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -1,27 +1,27 @@
 {
 	"_id": "derelict_clrnxi.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_clrnxi.db",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571062650832,
+	"last_scraped": 1571068197163,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571057268112,
-	"edit": 179,
-	"next_scrape": 1571104256195,
+	"updt": 1571062675690,
+	"edit": 180,
+	"next_scrape": 1571113693969,
 	"category": "dice_roller",
-	"last_update": 1571062650832,
+	"last_update": 1571068197163,
 	"output": [
 		{
 			"args": {},
-			"calls": 1480530,
+			"calls": 1493975,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t. ##",
