--- a/uknown_69y5dg.cubit_hash128.json
+++ b/uknown_69y5dg.cubit_hash128.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_69y5dg.cubit_hash128",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_69y5dg.cubit_hash128",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564086338794,
-	"last_scraped": 1571064490861,
+	"last_scraped": 1571069966337,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564086338794
 		}
 	],
-	"next_scrape": 1571109551583,
+	"next_scrape": 1571115331109,
 	"category": "plant_sim",
-	"last_update": 1571064490861,
+	"last_update": 1571069966337,
 	"output": [
 		{
 			"args": {},
@@ -71,7 +71,7 @@
 		},
 		{
 			"args": {},
-			"calls": 167341,
+			"calls": 168444,
 			"base": "c:\"z138o2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"re's ",
@@ -127,6 +127,6 @@
 			]
 		}
 	],
-	"updt": 1571059069501,
-	"edit": 211
+	"updt": 1571064707382,
+	"edit": 212
 }
