--- a/uknown_9zvqnm.riot.json
+++ b/uknown_9zvqnm.riot.json
@@ -6,20 +6,20 @@
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565391280951,
-	"last_scraped": 1571071684968,
+	"last_scraped": 1571071703366,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565391280951
 		}
 	],
-	"next_scrape": 1571117317218,
+	"next_scrape": 1571113002247,
 	"category": "dice_roller",
-	"last_update": 1571071684968,
+	"last_update": 1571071703366,
 	"output": [
 		{
 			"args": {},
-			"calls": 997284,
+			"calls": 1001706,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"F_CLS",
@@ -56,8 +56,8 @@
 			]
 		}
 	],
-	"updt": 1571066286675,
-	"edit": 108,
+	"updt": 1571071700538,
+	"edit": 109,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
