--- a/uknown_tuh6rk.stealgc.json
+++ b/uknown_tuh6rk.stealgc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_tuh6rk.stealgc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_tuh6rk.stealgc",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565570384834,
-	"last_scraped": 1571066810309,
+	"last_scraped": 1571072758494,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1571113124361,
+	"next_scrape": 1571113908563,
 	"category": "dice_roller",
-	"last_update": 1571066810309,
+	"last_update": 1571072758494,
 	"output": [
 		{
 			"args": {},
-			"calls": 2323541,
+			"calls": 2339125,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"to ne",
@@ -350,6 +350,6 @@
 			]
 		}
 	],
-	"updt": 1571061099165,
-	"edit": 255
+	"updt": 1571066964377,
+	"edit": 256
 }
