--- a/unknown_91xrzs.jake.json
+++ b/unknown_91xrzs.jake.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_91xrzs.jake",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_91xrzs.jake",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571066822145,
+	"last_scraped": 1571072818024,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571061099165,
-	"edit": 66,
+	"updt": 1571066964377,
+	"edit": 67,
 	"scrape_ct": 1,
-	"next_scrape": 1571108026330,
+	"next_scrape": 1571116979010,
 	"category": "coin_flipper",
-	"last_update": 1571066822145,
+	"last_update": 1571072818024,
 	"output": [
 		{
 			"args": {},
-			"calls": 589906,
+			"calls": 603154,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"thing",
