--- a/uknown_gfh12g.a.json
+++ b/uknown_gfh12g.a.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_gfh12g.a",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_gfh12g.a",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566480192852,
-	"last_scraped": 1571071442017,
+	"last_scraped": 1571077089104,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566480192852
 		}
 	],
-	"next_scrape": 1571112304905,
+	"next_scrape": 1571120817802,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571071442017,
+	"last_update": 1571077089104,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 276239,
+			"calls": 278324,
 			"base": "YOU COULD WIN 4K537GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
 				" Mallo",
@@ -70,8 +70,8 @@
 			]
 		}
 	],
-	"updt": 1571065835778,
-	"edit": 126,
+	"updt": 1571071475999,
+	"edit": 127,
 	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
