--- a/uknown_rubp2z.side.json
+++ b/uknown_rubp2z.side.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_rubp2z.side",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_rubp2z.side",
 	"sector": "K_0199",
 	"sec_level": 4,
 	"date_added": 1564014839075,
-	"last_scraped": 1571071350303,
+	"last_scraped": 1571077018110,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564014839075
 		}
 	],
-	"next_scrape": 1571113903343,
+	"next_scrape": 1571123044422,
 	"category": "plant_sim",
-	"last_update": 1571071350303,
+	"last_update": 1571077018110,
 	"output": [
 		{
 			"args": {},
@@ -83,7 +83,7 @@
 		},
 		{
 			"args": {},
-			"calls": 195142,
+			"calls": 195876,
 			"base": "c:\"xbk5u7\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"n an ",
@@ -144,8 +144,8 @@
 			]
 		}
 	],
-	"updt": 1571065835778,
-	"edit": 251,
+	"updt": 1571071475999,
+	"edit": 252,
 	"identified": [
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
