--- a/unknown_etjdee.render.json
+++ b/unknown_etjdee.render.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_etjdee.render",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_etjdee.render",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564168295048,
-	"last_scraped": 1571070879561,
+	"last_scraped": 1571076757837,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564168295048
 		}
 	],
-	"updt": 1571065383931,
-	"edit": 236,
-	"next_scrape": 1571110729096,
+	"updt": 1571071024761,
+	"edit": 237,
+	"next_scrape": 1571121175543,
 	"category": "plant_sim",
-	"last_update": 1571070879561,
+	"last_update": 1571076757837,
 	"output": [
 		{
 			"args": {},
@@ -236,7 +236,7 @@
 		},
 		{
 			"args": {},
-			"calls": 98999,
+			"calls": 100115,
 			"base": "c:\"5czxxn\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ts of",
