--- a/derelict_hynxc6.calendarscraper.json
+++ b/derelict_hynxc6.calendarscraper.json
@@ -6,7 +6,7 @@
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565503257030,
-	"last_scraped": 1571077258124,
+	"last_scraped": 1571082651274,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1571122627398,
+	"next_scrape": 1571123376850,
 	"category": "coin_flipper",
-	"last_update": 1571077258124,
+	"last_update": 1571082651274,
 	"output": [
 		{
 			"args": {},
-			"calls": 998670,
+			"calls": 1004200,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e isn",
@@ -61,6 +61,6 @@
 			]
 		}
 	],
-	"updt": 1571071700538,
-	"edit": 106
+	"updt": 1571077334985,
+	"edit": 107
 }
