--- a/unknown_8qfkzs.t3scrape.json
+++ b/unknown_8qfkzs.t3scrape.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_8qfkzs.t3scrape",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_8qfkzs.t3scrape",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571079147204,
+	"last_scraped": 1571084421528,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571073957463,
-	"edit": 122,
-	"next_scrape": 1571124579206,
+	"updt": 1571079367975,
+	"edit": 123,
+	"next_scrape": 1571129361885,
 	"category": "dice_roller",
-	"last_update": 1571079147204,
+	"last_update": 1571084421528,
 	"output": [
 		{
 			"args": {},
-			"calls": 1017047,
+			"calls": 1029265,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ns ind",
