--- a/unknown_z0zxqu.xkcd.json
+++ b/unknown_z0zxqu.xkcd.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_z0zxqu.xkcd",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_z0zxqu.xkcd",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565401172719,
-	"last_scraped": 1571081487714,
+	"last_scraped": 1571086787917,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1571124225020,
+	"next_scrape": 1571131879695,
 	"category": "plant_sim",
-	"last_update": 1571081487714,
+	"last_update": 1571086787917,
 	"output": [
 		{
 			"args": {},
@@ -44,7 +44,7 @@
 		},
 		{
 			"args": {},
-			"calls": 152367,
+			"calls": 153840,
 			"base": "c:\"ajebl6\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"OG ERR",
@@ -85,6 +85,6 @@
 			]
 		}
 	],
-	"updt": 1571076209257,
-	"edit": 176
+	"updt": 1571081846244,
+	"edit": 177
 }
