--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_6mixmg.whitelist",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_6mixmg.whitelist",
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1571092718801,
+	"last_scraped": 1571097762046,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1571135808626,
+	"next_scrape": 1571141293127,
 	"category": "plant_sim",
-	"last_update": 1571092718801,
+	"last_update": 1571097762046,
 	"output": [
 		{
 			"args": {},
@@ -314,6 +314,23 @@
 				"ld bring",
 				", impres"
 			]
+		},
+		{
+			"args": {},
+			"calls": 1808,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n****\n\n\n        \n           Á      Á.\n            Á  ÁÁ Ã ÁÁÁÁ\n        Á  Ã/ÁÃÃ/ÁÁ/ÁÃÃÁÁÁ\n        ÃÁÁÁÁÁ ÃÁ/Ã/ÃÃÃÁ\n        ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -338,6 +355,6 @@
 			]
 		}
 	],
-	"updt": 1571088159463,
-	"edit": 175
+	"updt": 1571092894659,
+	"edit": 176
 }
