--- a/uknown_w6wlz1.backend_bsa.json
+++ b/uknown_w6wlz1.backend_bsa.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_w6wlz1.backend_bsa",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "uknown_w6wlz1.backend_bsa",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571099028872,
+	"last_scraped": 1571103658046,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571094245767,
-	"edit": 93,
-	"next_scrape": 1571140005252,
+	"updt": 1571099207229,
+	"edit": 94,
+	"next_scrape": 1571188636856,
 	"category": "dice_roller",
-	"last_update": 1571099028872,
+	"last_update": 1571103658046,
 	"output": [
 		{
 			"args": {},
-			"calls": 807931,
+			"calls": 824660,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"# Gos",
