--- a/unknown_nresvh.meowmeowbeenz.json
+++ b/unknown_nresvh.meowmeowbeenz.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_nresvh.meowmeowbeenz",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_nresvh.meowmeowbeenz",
 	"sector": "K_3804",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564561380223
+		},
+		{
+			"type": "died",
+			"when": 1571103582763
 		}
 	],
 	"scrape_ct": 7,
@@ -130,8 +134,8 @@
 			]
 		}
 	],
-	"updt": 1568727474370,
-	"edit": 22,
+	"updt": 1570604613748,
+	"edit": 23,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
