--- a/unknown_0pkjh3.trust.json
+++ b/unknown_0pkjh3.trust.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_0pkjh3.trust",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0pkjh3.trust",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564357522436,
-	"last_scraped": 1571101207056,
+	"last_scraped": 1571106073268,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564357522436
 		}
 	],
-	"next_scrape": 1571142181574,
+	"next_scrape": 1571147795879,
 	"category": "dice_roller",
-	"last_update": 1571101207056,
+	"last_update": 1571106073268,
 	"output": [
 		{
 			"args": {},
-			"calls": 2346315,
+			"calls": 2353365,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"sy to",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1571096727674,
-	"edit": 225
+	"updt": 1571101240187,
+	"edit": 226
 }
