--- a/unknown_ll1h7z.fishie_tank.json
+++ b/unknown_ll1h7z.fishie_tank.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_ll1h7z.fishie_tank",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ll1h7z.fishie_tank",
 	"sector": "VNP_9275",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571103466939,
+	"last_scraped": 1571108418250,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571098980633,
-	"edit": 76,
-	"next_scrape": 1571146210419,
+	"updt": 1571103494201,
+	"edit": 77,
+	"next_scrape": 1571150470608,
 	"category": "plant_sim",
-	"last_update": 1571103466939,
+	"last_update": 1571108418250,
 	"output": [
 		{
 			"args": {},
@@ -81,7 +81,7 @@
 		},
 		{
 			"args": {},
-			"calls": 53084,
+			"calls": 55355,
 			"base": "c:\"tluzmp\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" in o",
