--- a/unknown_5umh34.private.json
+++ b/unknown_5umh34.private.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_5umh34.private",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_5umh34.private",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571108700322,
+	"last_scraped": 1571113737471,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571103721612,
-	"edit": 83,
-	"next_scrape": 1571148856747,
+	"updt": 1571108911353,
+	"edit": 84,
+	"next_scrape": 1571153913678,
 	"category": "plant_sim",
-	"last_update": 1571108700322,
+	"last_update": 1571113737471,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 58139,
+			"calls": 60200,
 			"base": "c:\"gmmxgj\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ot a ",
