--- a/uknown_esonx7.bot_scam_do_not_run.json
+++ b/uknown_esonx7.bot_scam_do_not_run.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_esonx7.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_esonx7.bot_scam_do_not_run",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565252782525,
-	"last_scraped": 1571112321344,
+	"last_scraped": 1571117727379,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565252782525
 		}
 	],
-	"updt": 1571107332422,
-	"edit": 235,
-	"next_scrape": 1571156310968,
+	"updt": 1571117705687,
+	"edit": 237,
+	"next_scrape": 1571161121491,
 	"category": "dice_roller",
-	"last_update": 1571112321344,
+	"last_update": 1571117727379,
 	"output": [
 		{
 			"args": {},
-			"calls": 2229526,
+			"calls": 2242424,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ou ar",
