--- a/uknown_lqxcau.tgtr.json
+++ b/uknown_lqxcau.tgtr.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.tgtr",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_lqxcau.tgtr",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1571113324616,
+	"last_scraped": 1571118741100,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,16 +21,16 @@
 			}
 		]
 	],
-	"updt": 1571108685692,
-	"edit": 1495,
+	"updt": 1571113422261,
+	"edit": 1496,
 	"pl_output": "`DSorry, ``Ftgtr``D is in a testing phase right now.`",
-	"next_scrape": 1571159960622,
+	"next_scrape": 1571158915492,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571113324616,
+	"last_update": 1571118741100,
 	"output": [
 		{
 			"args": {},
-			"calls": 215085,
+			"calls": 220831,
 			"base": "`DSorry, ``Ftgtr``D is in a testing phase right now.`",
 			"fragments": [
 				"_CLST",
