--- a/uknown_n1rumf.defender_auth.json
+++ b/uknown_n1rumf.defender_auth.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_n1rumf.defender_auth",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_n1rumf.defender_auth",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571119694993,
+	"last_scraped": 1571124570013,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571114325121,
-	"edit": 197,
-	"next_scrape": 1571163446329,
+	"updt": 1571119734684,
+	"edit": 198,
+	"next_scrape": 1571166165896,
 	"category": "dice_roller",
-	"last_update": 1571119694993,
+	"last_update": 1571124570013,
 	"output": [
 		{
 			"args": {},
-			"calls": 1820806,
+			"calls": 1829803,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"mited",
