--- a/unknown_cr8xej.t1_db.json
+++ b/unknown_cr8xej.t1_db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_cr8xej.t1_db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_cr8xej.t1_db",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565258632124,
-	"last_scraped": 1571121424816,
+	"last_scraped": 1571126232852,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 10,
-	"next_scrape": 1571166318103,
+	"next_scrape": 1571169916346,
 	"category": "plant_sim",
-	"last_update": 1571121424816,
+	"last_update": 1571126232852,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 82348,
+			"calls": 84447,
 			"base": "c:\"wbuk80\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"| PROG ",
@@ -77,8 +77,8 @@
 			]
 		}
 	],
-	"updt": 1571115902701,
-	"edit": 103,
+	"updt": 1571121542333,
+	"edit": 104,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
