--- a/uknown_rubp2z.side.json
+++ b/uknown_rubp2z.side.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_rubp2z.side",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_rubp2z.side",
 	"sector": "K_0199",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564014839075
+		},
+		{
+			"type": "died",
+			"when": 1571135405851
 		}
 	],
 	"next_scrape": 1571123044422,
@@ -144,8 +148,8 @@
 			]
 		}
 	],
-	"updt": 1571071475999,
-	"edit": 252,
+	"updt": 1571077110636,
+	"edit": 253,
 	"identified": [
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
