--- a/uknown_hdlvcu.log.json
+++ b/uknown_hdlvcu.log.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_hdlvcu.log",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_hdlvcu.log",
 	"sector": "VNP_1006",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562588837567
+		},
+		{
+			"type": "died",
+			"when": 1571139460506
 		}
 	],
 	"next_scrape": 1570645149775,
@@ -137,6 +141,6 @@
 			]
 		}
 	],
-	"updt": 1568708756522,
-	"edit": 34
+	"updt": 1570603708726,
+	"edit": 35
 }
