--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -1,21 +1,21 @@
 {
 	"_id": "derelict_clrnxi.donate",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_clrnxi.donate",
 	"sector": "SPC_4267",
 	"sec_level": 4,
 	"date_added": 1565382488474,
-	"last_scraped": 1571136852264,
+	"last_scraped": 1571141577911,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565382488474
 		}
 	],
-	"next_scrape": 1571181375873,
+	"next_scrape": 1571182336441,
 	"category": "plant_sim",
-	"last_update": 1571136852264,
+	"last_update": 1571141577911,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 130274,
+			"calls": 131909,
 			"base": "c:\"wz0fyi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"A_SEC",
@@ -96,6 +96,6 @@
 			]
 		}
 	],
-	"updt": 1571131692345,
-	"edit": 152
+	"updt": 1571136876759,
+	"edit": 153
 }
