--- a/uknown_hdlvcu.log.json
+++ b/uknown_hdlvcu.log.json
@@ -43,12 +43,16 @@
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
 						"tolog",
-						"t thi",
-						" AI d",
+						" hard",
 						"ty pla",
 						"train ",
+						"ng an ",
 						"lanner",
-						"y. ## I"
+						"gh to ",
+						"y. ## I",
+						"n an AI",
+						"at think",
+						" an AI d"
 					]
 				}
 			]
@@ -82,12 +86,16 @@
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
 						"tolog",
-						"t thi",
-						" AI d",
+						" hard",
 						"ty pla",
 						"train ",
+						"ng an ",
 						"lanner",
-						"y. ## I"
+						"gh to ",
+						"y. ## I",
+						"n an AI",
+						"at think",
+						" an AI d"
 					]
 				}
 			]
@@ -116,12 +124,16 @@
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
 						"tolog",
-						"t thi",
-						" AI d",
+						" hard",
 						"ty pla",
 						"train ",
+						"ng an ",
 						"lanner",
-						"y. ## I"
+						"gh to ",
+						"y. ## I",
+						"n an AI",
+						"at think",
+						" an AI d"
 					]
 				}
 			]
@@ -132,15 +144,19 @@
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 			"frags": [
 				"tolog",
-				"t thi",
-				" AI d",
+				" hard",
 				"ty pla",
 				"train ",
+				"ng an ",
 				"lanner",
-				"y. ## I"
+				"gh to ",
+				"y. ## I",
+				"n an AI",
+				"at think",
+				" an AI d"
 			]
 		}
 	],
-	"updt": 1570603708726,
-	"edit": 35
+	"updt": 1571139585574,
+	"edit": 36
 }
