--- a/unknown_vu8sig.s.json
+++ b/unknown_vu8sig.s.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_vu8sig.s",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_vu8sig.s",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571147690737,
+	"last_scraped": 1571147756737,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571143192416,
-	"edit": 83,
+	"updt": 1571147700523,
+	"edit": 84,
 	"scrape_ct": 1,
-	"next_scrape": 1571191220781,
+	"next_scrape": 1571189273373,
 	"category": "dice_roller",
-	"last_update": 1571147690737,
+	"last_update": 1571147756737,
 	"output": [
 		{
 			"args": {},
-			"calls": 701602,
+			"calls": 704137,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"r sid",
