--- a/unknown_rjrzwu.fuckthisshitimout.json
+++ b/unknown_rjrzwu.fuckthisshitimout.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_rjrzwu.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_rjrzwu.fuckthisshitimout",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564141596158
+		},
+		{
+			"type": "died",
+			"when": 1571149971839
 		}
 	],
 	"next_scrape": 1571043716171,
@@ -330,6 +334,6 @@
 			]
 		}
 	],
-	"updt": 1570990427956,
-	"edit": 178
+	"updt": 1570997190318,
+	"edit": 179
 }
