--- a/unknown_aprmr6.acct.json
+++ b/unknown_aprmr6.acct.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_aprmr6.acct",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_aprmr6.acct",
 	"sector": "SPC_7402",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562756729085
+		},
+		{
+			"type": "died",
+			"when": 1571151748824
 		}
 	],
 	"next_scrape": 1571029562468,
@@ -353,6 +357,6 @@
 			]
 		}
 	],
-	"updt": 1570979370303,
-	"edit": 431
+	"updt": 1570986139240,
+	"edit": 432
 }
