--- a/unknown_hz6ahx.scam.json
+++ b/unknown_hz6ahx.scam.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_hz6ahx.scam",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_hz6ahx.scam",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565877756940,
-	"last_scraped": 1571147046849,
+	"last_scraped": 1571151627341,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565877756940
 		}
 	],
-	"next_scrape": 1571193554218,
+	"next_scrape": 1571196454888,
 	"category": "plant_sim",
-	"last_update": 1571147046849,
+	"last_update": 1571151627341,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 146339,
+			"calls": 146903,
 			"base": "c:\"8naiyw\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"cards",
@@ -108,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1571142514043,
-	"edit": 169
+	"updt": 1571147248904,
+	"edit": 170
 }
