--- a/derelict_hynxc6.calendarscraper.json
+++ b/derelict_hynxc6.calendarscraper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_hynxc6.calendarscraper",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_hynxc6.calendarscraper",
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565503257030,
-	"last_scraped": 1571160556541,
+	"last_scraped": 1571160565430,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1571207294970,
+	"next_scrape": 1571204654828,
 	"category": "coin_flipper",
-	"last_update": 1571160538618,
+	"last_update": 1571160565430,
 	"output": [
 		{
 			"args": {},
-			"calls": 1120915,
+			"calls": 1130659,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e isn",
