--- a/uknown_fvx38a.to_str.json
+++ b/uknown_fvx38a.to_str.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_fvx38a.to_str",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_fvx38a.to_str",
 	"sector": "SPC_9316",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562678039546
+		},
+		{
+			"type": "died",
+			"when": 1571160628067
 		}
 	],
 	"next_scrape": 1570746580023,
@@ -152,8 +156,8 @@
 			]
 		}
 	],
-	"updt": 1570691181723,
-	"edit": 30,
+	"updt": 1570703586700,
+	"edit": 31,
 	"retry_args": [
 		{
 			"do": "clean"
