--- a/uknown_fvx38a.to_str.json
+++ b/uknown_fvx38a.to_str.json
@@ -47,13 +47,22 @@
 				{
 					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 					"frags": [
+						" this",
+						" ## T",
 						"png] [",
-						"g] [ba",
+						"icon_p",
+						"ality.",
 						"] [bat",
+						"ny_icon",
+						"ng] [ba",
+						"icality",
 						"con_png",
 						". ## [b",
 						"# [bunn",
-						"n_png] #"
+						" [bat_i",
+						"png] ## ",
+						"n_png] #",
+						"acticali"
 					]
 				}
 			]
@@ -91,13 +100,22 @@
 				{
 					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 					"frags": [
+						" this",
+						" ## T",
 						"png] [",
-						"g] [ba",
+						"icon_p",
+						"ality.",
 						"] [bat",
+						"ny_icon",
+						"ng] [ba",
+						"icality",
 						"con_png",
 						". ## [b",
 						"# [bunn",
-						"n_png] #"
+						" [bat_i",
+						"png] ## ",
+						"n_png] #",
+						"acticali"
 					]
 				}
 			]
@@ -130,13 +148,22 @@
 				{
 					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 					"frags": [
+						" this",
+						" ## T",
 						"png] [",
-						"g] [ba",
+						"icon_p",
+						"ality.",
 						"] [bat",
+						"ny_icon",
+						"ng] [ba",
+						"icality",
 						"con_png",
 						". ## [b",
 						"# [bunn",
-						"n_png] #"
+						" [bat_i",
+						"png] ## ",
+						"n_png] #",
+						"acticali"
 					]
 				}
 			]
@@ -146,18 +173,27 @@
 		{
 			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 			"frags": [
+				" this",
+				" ## T",
 				"png] [",
-				"g] [ba",
+				"icon_p",
+				"ality.",
 				"] [bat",
+				"ny_icon",
+				"ng] [ba",
+				"icality",
 				"con_png",
 				". ## [b",
 				"# [bunn",
-				"n_png] #"
+				" [bat_i",
+				"png] ## ",
+				"n_png] #",
+				"acticali"
 			]
 		}
 	],
-	"updt": 1570703586700,
-	"edit": 31,
+	"updt": 1571160787944,
+	"edit": 32,
 	"retry_args": [
 		{
 			"do": "clean"
