--- a/unknown_yuqh2v.t1_scraper.json
+++ b/unknown_yuqh2v.t1_scraper.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_yuqh2v.t1_scraper",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yuqh2v.t1_scraper",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571162253992,
+	"last_scraped": 1571166278490,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571157854679,
-	"edit": 199,
-	"next_scrape": 1571204909090,
+	"updt": 1571162370137,
+	"edit": 200,
+	"next_scrape": 1571206891866,
 	"category": "coin_flipper",
-	"last_update": 1571162253992,
+	"last_update": 1571166278490,
 	"output": [
 		{
 			"args": {},
-			"calls": 1799837,
+			"calls": 1813763,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"patter",
