--- a/uknown_yoxqm5.ads.json
+++ b/uknown_yoxqm5.ads.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_yoxqm5.ads",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_yoxqm5.ads",
 	"sector": "SPC_9562",
 	"sec_level": 4,
 	"date_added": 1566556056558,
-	"last_scraped": 1571164070209,
+	"last_scraped": 1571168169283,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566556056558
 		}
 	],
-	"next_scrape": 1571208012483,
+	"next_scrape": 1571212405996,
 	"category": "dice_roller",
-	"last_update": 1571164070209,
+	"last_update": 1571168169283,
 	"output": [
 		{
 			"args": {},
-			"calls": 1790771,
+			"calls": 1800191,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"XE2A8",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1571159885590,
-	"edit": 176
+	"updt": 1571164174519,
+	"edit": 177
 }
