--- a/uknown_xf2dal.pub_info_o8aw40.json
+++ b/uknown_xf2dal.pub_info_o8aw40.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_xf2dal.pub_info_o8aw40",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xf2dal.pub_info_o8aw40",
 	"sector": "SPC_8841",
 	"sec_level": 4,
 	"date_added": 1565482044943,
-	"last_scraped": 1571164591762,
+	"last_scraped": 1571168721134,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565482044943
 		}
 	],
-	"next_scrape": 1571208912618,
+	"next_scrape": 1571210933439,
 	"category": "plant_sim",
-	"last_update": 1571164591762,
+	"last_update": 1571168721134,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 118606,
+			"calls": 119726,
 			"base": "c:\"4ktela\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ust b",
@@ -108,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1571160560410,
-	"edit": 155
+	"updt": 1571164625527,
+	"edit": 156
 }
