--- a/uknown_kicz6i.k3y_cull.json
+++ b/uknown_kicz6i.k3y_cull.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_kicz6i.k3y_cull",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_kicz6i.k3y_cull",
 	"sector": "K_8441",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562011754363
+		},
+		{
+			"type": "died",
+			"when": 1571170595068
 		}
 	],
 	"next_scrape": 1571044518419,
@@ -87,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1570998316816,
-	"edit": 332
+	"updt": 1571004633109,
+	"edit": 333
 }
