--- a/uknown_ido5g4.free_vbucks.json
+++ b/uknown_ido5g4.free_vbucks.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_ido5g4.free_vbucks",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ido5g4.free_vbucks",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564080977341,
-	"last_scraped": 1571169208052,
+	"last_scraped": 1571172645574,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564080977341
 		}
 	],
-	"next_scrape": 1571215081052,
+	"next_scrape": 1571217690849,
 	"category": "coin_flipper",
-	"last_update": 1571169208052,
+	"last_update": 1571172645574,
 	"output": [
 		{
 			"args": {},
-			"calls": 2364770,
+			"calls": 2375091,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"to he",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1571165077758,
-	"edit": 243
+	"updt": 1571169363356,
+	"edit": 244
 }
