--- a/uknown_lqxcau.bmp.json
+++ b/uknown_lqxcau.bmp.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.bmp",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_lqxcau.bmp",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1571173359039,
+	"last_scraped": 1571176961840,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,16 +21,16 @@
 			}
 		]
 	],
-	"updt": 1571169814861,
-	"edit": 672,
+	"updt": 1571173647688,
+	"edit": 673,
 	"pl_output": "skriipts.bmp\n`FA bitmap renderer`\n\n`FUSAGE`\n\tPass an array of bytes as the parameter `Nd`.\n\n`FCAVEATS`\n\tOnly colors that are supported by hackmud with color codes will be rendered correctly, if the image contains a color that is not supported by hackmud, an allowed color with the closest hue will be used.\n\tThis only supports 8bpp and 24bpp formats with a BITMAPINFOHEADER.",
-	"next_scrape": 1571216075506,
+	"next_scrape": 1571221863913,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571173359039,
+	"last_update": 1571176961840,
 	"output": [
 		{
 			"args": {},
-			"calls": 7246416,
+			"calls": 7293155,
 			"base": "skriipts.bmp\n`FA bitmap renderer`\n\n`FUSAGE`\n\tPass an array of bytes as the parameter `Nd`.\n\n`FCAVEATS`\n\tOnly colors that are supported by hackmud with color codes will be rendered correctly, if the image contains a color that is not supported by hackmud, an allowed color with the closest hue will be used.\n\tThis only supports 8bpp and 24bpp formats with a BITMAPINFOHEADER.",
 			"fragments": [
 				"you h",
