--- a/uknown_xr3578.random.json
+++ b/uknown_xr3578.random.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_xr3578.random",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xr3578.random",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569263180050,
-	"last_scraped": 1571173721266,
+	"last_scraped": 1571190421407,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569263180050
 		}
 	],
-	"next_scrape": 1571215151905,
+	"next_scrape": 1571235524149,
 	"category": "plant_sim",
-	"last_update": 1571173721266,
+	"last_update": 1571190421407,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 70832,
+			"calls": 71399,
 			"base": "c:\"zdlx60\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"d wha",
@@ -70,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1571170038023,
-	"edit": 112
+	"updt": 1571175121602,
+	"edit": 113
 }
