--- a/uknown_9zvqnm.riot.json
+++ b/uknown_9zvqnm.riot.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_9zvqnm.riot",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_9zvqnm.riot",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565391280951,
-	"last_scraped": 1571192840993,
+	"last_scraped": 1571196339191,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565391280951
 		}
 	],
-	"next_scrape": 1571239018659,
+	"next_scrape": 1571236437273,
 	"category": "dice_roller",
-	"last_update": 1571192840993,
+	"last_update": 1571196339191,
 	"output": [
 		{
 			"args": {},
-			"calls": 1196651,
+			"calls": 1205585,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"F_CLS",
@@ -56,8 +56,8 @@
 			]
 		}
 	],
-	"updt": 1571176473762,
-	"edit": 132,
+	"updt": 1571193008097,
+	"edit": 133,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
