--- a/unknown_32snxj.mag.json
+++ b/unknown_32snxj.mag.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_32snxj.mag",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_32snxj.mag",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564690214907,
-	"last_scraped": 1571192710435,
+	"last_scraped": 1571196149825,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564690214907
 		}
 	],
-	"next_scrape": 1571235450715,
+	"next_scrape": 1571241241155,
 	"category": "plant_sim",
-	"last_update": 1571192710435,
+	"last_update": 1571196149825,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 133807,
+			"calls": 135036,
 			"base": "c:\"qta0g2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"t_ico",
@@ -117,6 +117,6 @@
 			]
 		}
 	],
-	"updt": 1571176024344,
-	"edit": 154
+	"updt": 1571193008097,
+	"edit": 155
 }
