--- a/uknown_glqjgs.random.json
+++ b/uknown_glqjgs.random.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_glqjgs.random",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_glqjgs.random",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571194057934,
+	"last_scraped": 1571197666256,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571191204352,
-	"edit": 256,
-	"next_scrape": 1571237233888,
+	"updt": 1571194134680,
+	"edit": 257,
+	"next_scrape": 1571240841570,
 	"category": "coin_flipper",
-	"last_update": 1571194057934,
+	"last_update": 1571197666256,
 	"output": [
 		{
 			"args": {},
-			"calls": 2235273,
+			"calls": 2245609,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"w you",
