--- a/uknown_k3hkgg.translate.json
+++ b/uknown_k3hkgg.translate.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_k3hkgg.translate",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_k3hkgg.translate",
 	"sector": "HJG_8307",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1562336992224
+		},
+		{
+			"type": "died",
+			"when": 1571205094886
 		}
 	],
-	"updt": 1570713508118,
-	"edit": 11,
+	"updt": 1570726812951,
+	"edit": 12,
 	"next_scrape": 1570771027420,
 	"category": "clicker",
 	"last_update": 1570726595497,
