--- a/unknown_hbhyqa.wiki.json
+++ b/unknown_hbhyqa.wiki.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_hbhyqa.wiki",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_hbhyqa.wiki",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571203422713,
+	"last_scraped": 1571206555795,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571200450577,
-	"edit": 93,
+	"updt": 1571206543988,
+	"edit": 95,
 	"scrape_ct": 1,
-	"next_scrape": 1571246841059,
+	"next_scrape": 1571247016139,
 	"category": "coin_flipper",
-	"last_update": 1571203422713,
+	"last_update": 1571206555795,
 	"output": [
 		{
 			"args": {},
-			"calls": 768429,
+			"calls": 779202,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"am | ",
