--- a/unknown_jryjpv.vet.json
+++ b/unknown_jryjpv.vet.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_jryjpv.vet",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_jryjpv.vet",
 	"sector": "K_9556",
 	"sec_level": 4,
@@ -23,12 +23,16 @@
 				"from": "K_9556",
 				"to": "VNP_3574"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571211834613
+		}
 	],
 	"pl_output": "\n\t\tWelcome to Vet v0.1.0, a `LFULLSEC` defensive security tool by sy. \n\t\tTo start vetting users and scripts, first make macros:\n\n\t\t/vet = sy.vet {{ name: \"{0}\" }}\n\n\t\tThen call it with /vet pica or /vet sy.vet \n",
 	"next_scrape": 1570761734051,
-	"updt": 1570707195226,
-	"edit": 378,
+	"updt": 1570719376112,
+	"edit": 379,
 	"category": "UNKNOWN CATEGORY",
 	"last_update": 1570719196048,
 	"output": [
