--- a/uknown_bofn3d.external_yg40iz.json
+++ b/uknown_bofn3d.external_yg40iz.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_bofn3d.external_yg40iz",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_bofn3d.external_yg40iz",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571209866580,
+	"last_scraped": 1571212932955,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571207218902,
-	"edit": 98,
-	"next_scrape": 1571249822249,
+	"updt": 1571210282317,
+	"edit": 99,
+	"next_scrape": 1571254393071,
 	"category": "plant_sim",
-	"last_update": 1571209866580,
+	"last_update": 1571212932955,
 	"output": [
 		{
 			"args": {},
@@ -77,7 +77,7 @@
 		},
 		{
 			"args": {},
-			"calls": 75975,
+			"calls": 77621,
 			"base": "c:\"85lkwv\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ly 28",
