--- a/unknown_yv7jeg.desk.json
+++ b/unknown_yv7jeg.desk.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_yv7jeg.desk",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_yv7jeg.desk",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571209765012,
+	"last_scraped": 1571212779341,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571206543988,
-	"edit": 94,
+	"updt": 1571210282317,
+	"edit": 95,
 	"scrape_ct": 4,
-	"next_scrape": 1571252679278,
+	"next_scrape": 1571300464599,
 	"category": "coin_flipper",
-	"last_update": 1571209765012,
+	"last_update": 1571212779341,
 	"output": [
 		{
 			"args": {},
-			"calls": 808767,
+			"calls": 816710,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"em as",
