--- a/uknown_l21bqu.public.json
+++ b/uknown_l21bqu.public.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_l21bqu.public",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_l21bqu.public",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571216024521,
+	"last_scraped": 1571219178329,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571213214721,
-	"edit": 157,
-	"next_scrape": 1571258888380,
+	"updt": 1571216148033,
+	"edit": 158,
+	"next_scrape": 1571264579571,
 	"category": "plant_sim",
-	"last_update": 1571216024521,
+	"last_update": 1571219178329,
 	"output": [
 		{
 			"args": {},
@@ -97,7 +97,7 @@
 		},
 		{
 			"args": {},
-			"calls": 75423,
+			"calls": 76760,
 			"base": "c:\"yt7uwj\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"scribe",
