--- a/uknown_pg7a89.q.json
+++ b/uknown_pg7a89.q.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_pg7a89.q",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_pg7a89.q",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1564862745653,
-	"last_scraped": 1571218148810,
+	"last_scraped": 1571221465226,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564862745653
 		}
 	],
-	"next_scrape": 1571263594533,
+	"next_scrape": 1571263995345,
 	"category": "coin_flipper",
-	"last_update": 1571218148810,
+	"last_update": 1571221465226,
 	"output": [
 		{
 			"args": {},
-			"calls": 2054447,
+			"calls": 2061474,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"| NET",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1571215247378,
-	"edit": 197
+	"updt": 1571218176495,
+	"edit": 198
 }
