--- a/unknown_ub0jb7.bot_lowsec.json
+++ b/unknown_ub0jb7.bot_lowsec.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ub0jb7.bot_lowsec",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ub0jb7.bot_lowsec",
 	"sector": "K_3221",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563653116029
+		},
+		{
+			"type": "died",
+			"when": 1571224438501
 		}
 	],
 	"scrape_ct": 20,
@@ -1704,8 +1708,8 @@
 			]
 		}
 	],
-	"updt": 1568686417352,
-	"edit": 8,
+	"updt": 1570601454412,
+	"edit": 9,
 	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
 		{
