--- a/unknown_ixd6v0.scam.json
+++ b/unknown_ixd6v0.scam.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ixd6v0.scam",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_ixd6v0.scam",
 	"sector": "K_7243",
 	"sec_level": 1,
@@ -19,8 +19,12 @@
 				"from": "K_7243",
 				"to": "NGC_3568"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571229985628
+		}
 	],
-	"updt": 1568686193659,
-	"edit": 7
+	"updt": 1570601226296,
+	"edit": 8
 }
