--- a/uknown_ui7f8p.db.json
+++ b/uknown_ui7f8p.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ui7f8p.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ui7f8p.db",
 	"sector": "NGC_1810",
 	"sec_level": 4,
 	"date_added": 1566600461700,
-	"last_scraped": 1571238967051,
+	"last_scraped": 1571241671341,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1571280016403,
+	"next_scrape": 1571281950864,
 	"category": "plant_sim",
-	"last_update": 1571238967051,
+	"last_update": 1571241671341,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 186824,
+			"calls": 188681,
 			"base": "c:\"4ucyxm\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ty wi",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1571236558433,
-	"edit": 198
+	"updt": 1571239041880,
+	"edit": 199
 }
