--- a/unknown_k8rbwr.loc.json
+++ b/unknown_k8rbwr.loc.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_k8rbwr.loc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_k8rbwr.loc",
 	"sector": "HJG_4601",
 	"sec_level": 4,
 	"date_added": 1566036024528,
-	"last_scraped": 1571260823426,
+	"last_scraped": 1571263463528,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566036024528
 		}
 	],
-	"next_scrape": 1571301282015,
+	"next_scrape": 1571304747410,
 	"category": "plant_sim",
-	"last_update": 1571260823426,
+	"last_update": 1571263463528,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 173639,
+			"calls": 175347,
 			"base": "c:\"ii4noy\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"tter i",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1571258420733,
-	"edit": 216
+	"updt": 1571260900115,
+	"edit": 217
 }
