--- a/unknown_hnd65y.ch.json
+++ b/unknown_hnd65y.ch.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_hnd65y.ch",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_hnd65y.ch",
 	"sector": "HJG_8314",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571280683269
 		}
 	],
-	"updt": 1570810705216,
-	"edit": 85,
+	"updt": 1570818143951,
+	"edit": 86,
 	"next_scrape": 1570864375162,
 	"category": "dice_roller",
 	"last_update": 1570818126488,
