--- a/unknown_hnd65y.order.json
+++ b/unknown_hnd65y.order.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_hnd65y.order",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_hnd65y.order",
 	"sector": "K_2954",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "K_2954",
 				"to": "K_0199"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571280651993
+		}
 	],
-	"updt": 1569113622288,
-	"edit": 11,
+	"updt": 1570662551595,
+	"edit": 12,
 	"scrape_ct": 18,
 	"next_scrape": 1569107740089,
 	"category": "UNKNOWN CATEGORY",
