--- a/unknown_puquph.game.json
+++ b/unknown_puquph.game.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_puquph.game",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_puquph.game",
 	"sector": "NGC_2512",
 	"sec_level": 4,
@@ -19,10 +19,14 @@
 				"from": "NGC_2512",
 				"to": "K_3966"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571295671743
+		}
 	],
-	"updt": 1570738301364,
-	"edit": 334,
+	"updt": 1570747097912,
+	"edit": 335,
 	"pl_output": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
 	"next_scrape": 1570791229844,
 	"scrape_ct": 17,
