--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_puquph.weather",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_puquph.weather",
 	"sector": "NGC_1025",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571295784518
 		}
 	],
-	"updt": 1571044864628,
-	"edit": 63,
+	"updt": 1571051177192,
+	"edit": 64,
 	"next_scrape": 1571092819565,
 	"category": "coin_flipper",
 	"last_update": 1571051072241,
