--- a/uknown_r5xeto.irtest.json
+++ b/uknown_r5xeto.irtest.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_r5xeto.irtest",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_r5xeto.irtest",
 	"sector": "K_2954",
 	"sec_level": 2,
@@ -25,8 +25,12 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571295580104
+		}
 	],
-	"updt": 1569092874381,
-	"edit": 5
+	"updt": 1570602353583,
+	"edit": 6
 }
