--- a/unknown_bjl3my.extras.json
+++ b/unknown_bjl3my.extras.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_bjl3my.extras",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_bjl3my.extras",
 	"sector": "VNP_2284",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563713987809
+		},
+		{
+			"type": "died",
+			"when": 1571355423865
 		}
 	],
 	"next_scrape": 1571277279013,
@@ -87,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1571229909743,
-	"edit": 164
+	"updt": 1571233172266,
+	"edit": 165
 }
