--- a/unknown_bjl3my.pulse.json
+++ b/unknown_bjl3my.pulse.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_bjl3my.pulse",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_bjl3my.pulse",
 	"sector": "VNP_9399",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571355565350
 		}
 	],
-	"updt": 1570699750491,
-	"edit": 174,
+	"updt": 1570712381167,
+	"edit": 175,
 	"next_scrape": 1570751707554,
 	"category": "coin_flipper",
 	"last_update": 1570712037531,
