--- a/unknown_0o6wpi.paypal.json
+++ b/unknown_0o6wpi.paypal.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0o6wpi.paypal",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_0o6wpi.paypal",
 	"sector": "HJG_0482",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565327917562
+		},
+		{
+			"type": "died",
+			"when": 1571357251628
 		}
 	],
 	"next_scrape": 1570988051398,
@@ -108,6 +112,6 @@
 			]
 		}
 	],
-	"updt": 1570934608371,
-	"edit": 137
+	"updt": 1570942047888,
+	"edit": 138
 }
