--- a/unknown_43cjrs.box.json
+++ b/unknown_43cjrs.box.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_43cjrs.box",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_43cjrs.box",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571356678956,
+	"last_scraped": 1571359223916,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571354312466,
-	"edit": 218,
-	"next_scrape": 1571400030532,
+	"updt": 1571356795030,
+	"edit": 219,
+	"next_scrape": 1571402715925,
 	"category": "coin_flipper",
-	"last_update": 1571356678956,
+	"last_update": 1571359223916,
 	"output": [
 		{
 			"args": {},
-			"calls": 1777736,
+			"calls": 1788451,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tructu",
