--- a/unknown_u8unay.search.json
+++ b/unknown_u8unay.search.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_u8unay.search",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_u8unay.search",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571356598257,
+	"last_scraped": 1571359101584,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571354312466,
-	"edit": 154,
+	"updt": 1571356795030,
+	"edit": 155,
 	"scrape_ct": 0,
-	"next_scrape": 1571402909668,
+	"next_scrape": 1571403779834,
 	"category": "plant_sim",
-	"last_update": 1571356598257,
+	"last_update": 1571359101584,
 	"output": [
 		{
 			"args": {},
@@ -44,7 +44,7 @@
 		},
 		{
 			"args": {},
-			"calls": 131858,
+			"calls": 133107,
 			"base": "c:\"l1a2jl\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"on.\\n2",
