--- a/derelict_nnxezh.uick_start.json
+++ b/derelict_nnxezh.uick_start.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_nnxezh.uick_start",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_nnxezh.uick_start",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565629679587,
-	"last_scraped": 1571360744253,
+	"last_scraped": 1571363317108,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 2,
-	"next_scrape": 1571401547449,
+	"next_scrape": 1571406388721,
 	"category": "plant_sim",
-	"last_update": 1571360744253,
+	"last_update": 1571363317108,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 169876,
+			"calls": 171600,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"to us",
@@ -102,6 +102,6 @@
 			]
 		}
 	],
-	"updt": 1571358147690,
-	"edit": 182
+	"updt": 1571360852797,
+	"edit": 183
 }
