--- a/uknown_h7aui7.bot_midsec.json
+++ b/uknown_h7aui7.bot_midsec.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_h7aui7.bot_midsec",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_h7aui7.bot_midsec",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564547536219,
-	"last_scraped": 1571365858514,
+	"last_scraped": 1571368533146,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1571406125282,
+	"next_scrape": 1571409519933,
 	"category": "dice_roller",
-	"last_update": 1571365858514,
+	"last_update": 1571368533146,
 	"output": [
 		{
 			"args": {},
-			"calls": 2439680,
+			"calls": 2458090,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ntist",
@@ -63,8 +63,8 @@
 			]
 		}
 	],
-	"updt": 1571364011456,
-	"edit": 282,
+	"updt": 1571368521488,
+	"edit": 284,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
