--- a/uknown_4ild70.market.json
+++ b/uknown_4ild70.market.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_4ild70.market",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_4ild70.market",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565595001116,
-	"last_scraped": 1571369113945,
+	"last_scraped": 1571371643057,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565595001116
 		}
 	],
-	"next_scrape": 1571408891369,
+	"next_scrape": 1571417032610,
 	"category": "coin_flipper",
-	"last_update": 1571369113945,
+	"last_update": 1571371643057,
 	"output": [
 		{
 			"args": {},
-			"calls": 3557023,
+			"calls": 3584243,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"se, s",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1571366716541,
-	"edit": 382
+	"updt": 1571369200618,
+	"edit": 383
 }
