--- a/uknown_nos692.hackmud_nano.json
+++ b/uknown_nos692.hackmud_nano.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_nos692.hackmud_nano",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_nos692.hackmud_nano",
 	"sector": "NGC_7257",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565387311191
+		},
+		{
+			"type": "died",
+			"when": 1571376361471
 		}
 	],
 	"scrape_ct": 14,
@@ -1379,8 +1383,8 @@
 			]
 		}
 	],
-	"updt": 1570602128402,
-	"edit": 8,
+	"updt": 1570679008935,
+	"edit": 9,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
