--- a/uknown_semxxy.graph.json
+++ b/uknown_semxxy.graph.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_semxxy.graph",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_semxxy.graph",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -27,10 +27,14 @@
 				"from": "NGC_9612",
 				"to": "VNP_9534"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571390247086
+		}
 	],
-	"updt": 1569114299467,
-	"edit": 9,
+	"updt": 1570663003136,
+	"edit": 10,
 	"scrape_ct": 16,
 	"next_scrape": 1569108705020,
 	"category": "UNKNOWN CATEGORY",
